--- a/src/client/components/Catalog/AddToCatalog/AddToCatalog.scss
+++ b/src/client/components/Catalog/AddToCatalog/AddToCatalog.scss
@@ -7,16 +7,26 @@
     border: 1px solid #e0e0e0;
     padding: 20px; }
     &__formTitle {
-      font-size: 18rem;
-      margin-bottom: 20px;
+      text-decoration: underline;
+      font-size: 20rem;
+      margin-bottom: 15px;
       font-weight: 700; }
       &__formLabel {
         display: block;
         width: 100%;
-        margin-bottom: 10px; }
+        margin-bottom: 15px;
+        &:last-child {
+          margin-bottom: 0; } }
         &__formLabelText {
-          margin-right: 5px;
+          display: block;
+          width: 100%;
+          margin-bottom: 5px;
           font-size: 16rem; }
         &__formInput {
+          display: block;
+          width: 100%;
+          padding: 5px;
           width: 100%; }
+        &__formInputFile {
+          padding: 0; }
 }
