--- a/src/client/components/Catalog/Catalog.scss
+++ b/src/client/components/Catalog/Catalog.scss
@@ -1,8 +1,10 @@
+@import "../../globals/index.scss";
+
 .Catalog {
   font-size: 16rem;
   &__header {
     width: 100%;
-    height: 61px;
+    height: $HEADER_HEIGHT;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
