--- a/src/client/components/Catalog/Add/index.scss
+++ b/src/client/components/Catalog/Add/index.scss
@@ -28,23 +28,26 @@
           font-size: 16rem; }
         &__formInput {
           display: block;
-          width: 100%;
-          padding: 5px;
+          padding: 8px;
+          border-radius: 3px;
+          outline: none;
+          border: 1px solid rgba(#333333, .3);
           width: 100%; }
         &__formInputFile {
           padding: 0; }
     &__submit {
       padding: 10px;
+      cursor: pointer;
+      border-radius: 3px;
       border: none;
       outline: none;
       margin: 0;
       text-transform: uppercase;
       font-weight: 700;
-      font-size: 16rem;
-      background-color: #e0e0e0;
-    }
-    &__pre {
-      font-size: 12px;
-      margin-top: 10px;
+      font-size: 18rem;
+      background-color: #e0e0e0; }
+    &__data {
+      font-size: 16px;
+      margin-top: 15px;
     }
 }
