--- a/src/client/components/Catalog/Add/index.scss
+++ b/src/client/components/Catalog/Add/index.scss
@@ -1,67 +1,23 @@
 @import "../../../globals/index.scss";
 
 .Add {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  &__form {
-    border: 1px solid #e0e0e0;
-    height: calc(100vh - 2 * #{$HEADER_HEIGHT} - 40px);
-    border-radius: 4px;
-    padding: 15px; }
-    &__formTitle {
-      font-size: 24rem;
-      margin-bottom: 10px;
-      padding: 8px;
-      font-weight: 700; }
-    &__sectionOne {
-      justify-content: space-between;
+  &__header {
+    width: 100%;
+    height: $HEADER_HEIGHT;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border-bottom: 1px solid #e0e0e0;
+    padding: 20px; }
+    &__links {
       display: flex; }
-      &__songTitle {
-        width: calc(100% - 55px - 10px) !important; }
-      &__songTrackNumber {
-        width: 55px !important; }
-    &__formLabel {
-      display: block;
-      cursor: pointer;
-      border-radius: 4px;
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      &:hover {
-        background-color: #eeeeee; } }
-      &__formLabelText {
+      &__link {
+        margin-right: 5px;
+        font-size: 20rem;
         display: block;
-        font-weight: 300;
-        color: #616161;
-        width: 100%;
-        font-size: 18rem; }
-      &__formInput {
-        cursor: pointer;
-        display: block;
-        padding: 5px 0 6px 0;
-        background-color: transparent;
-        font-size: 18rem;
-        outline: none;
-        border: none;
-        border-bottom: 1px solid #757575;
-        width: 100%; }
-      &__formInputFile {
-          padding: 0; }
-    &__submit {
-      padding: 10px;
-      cursor: pointer;
-      border-radius: 3px;
-      border: none;
-      outline: none;
-      margin: 8px;
-      text-transform: lowercase;
-      font-weight: 700;
-      font-size: 22rem;
-      background-color: #e0e0e0; }
-    &__data {
-      font-size: 16px;
-      margin-top: 15px;
-    }
+        text-decoration: none;
+        &:last-child {
+          margin-right: 0; } }
+  &__main {
+    padding: 20px; }
 }
