--- a/src/client/globals/index.scss
+++ b/src/client/globals/index.scss
@@ -3,14 +3,14 @@ $FONT_SIZE: 1px;
 $LINE_HEIGHT: 1;
 $FONT_FAMILY: "Roboto";
 
-$PRIMARY: #212121;
-$PRIMARY_LIGHT: #484848;
-$PRIMARY_DARK: #000000;
-$PRIMARY_TEXT: #FFFFFF;
+$PRIMARY: #ff5722;
+$PRIMARY_LIGHT: #ff8a50;
+$PRIMARY_DARK: #c41c00;
+$PRIMARY_TEXT: #fafafa;
 
-$SECONDARY: #FAFAFA;
-$SECONDARY_LIGHT: #FFFFFF;
-$SECONDARY_DARK: #C7C7C7;
-$SECONDARY_TEXT: #000000;
+$SECONDARY: #212121;
+$SECONDARY_LIGHT: #484848;
+$SECONDARY_DARK: #000000;
+$SECONDARY_TEXT: #fafafa;
 
 $HEADER_HEIGHT: 60px;
