--- a/src/client/components/Header/index.scss
+++ b/src/client/components/Header/index.scss
@@ -5,10 +5,16 @@
   width: 100vw;
   height: $HEADER_HEIGHT;
   font-size: 16rem;
-  border-bottom: 1px solid #e0e0e0;
+  background-color: $PRIMARY;
+  z-index: 3;
+  box-shadow:
+    0 4px 5px -5px rgba(0,0,0,0.2),
+    0 6px 12px 2px rgba(0,0,0,0.14),
+    0 3px 15px 5px rgba(0,0,0,0.12);
   &__hamburger {
     font-size: 48rem;
     line-height: 48rem;
     outline: none;
+    color: $PRIMARY_TEXT;
     padding: 6px 10px; }
 }
