--- a/src/client/components/Sidebar/index.scss
+++ b/src/client/components/Sidebar/index.scss
@@ -4,6 +4,7 @@
   position: absolute;
   top: $HEADER_HEIGHT;
   left: 0;
+  z-index: 2;
   font-size: 16rem;
   width: 100vw;
   height: calc(100vh - #{$HEADER_HEIGHT});
