--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -29,6 +29,7 @@ html {
 #App {
   height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
+  position: relative;
   font-size: 16rem;
 }
