--- a/src/client/components/Header/index.scss
+++ b/src/client/components/Header/index.scss
@@ -5,7 +5,7 @@
   width: 100vw;
   height: $HEADER_HEIGHT;
   font-size: 16rem;
-  background-color: $PRIMARY;
+  background-color: $PRIMARY_DARK;
   z-index: 3;
   box-shadow:
     0 4px 5px -5px rgba(0,0,0,0.2),
