--- a/src/client/globals/index.scss
+++ b/src/client/globals/index.scss
@@ -3,14 +3,14 @@ $FONT_SIZE: 1px;
 $LINE_HEIGHT: 1;
 $FONT_FAMILY: "Roboto";
 
-$PRIMARY: #ff5722;
-$PRIMARY_LIGHT: #ff8a50;
-$PRIMARY_DARK: #c41c00;
+$PRIMARY: #00897b;
+$PRIMARY_LIGHT: #4ebaaa;
+$PRIMARY_DARK: #005b4f;
 $PRIMARY_TEXT: #fafafa;
 
-$SECONDARY: #212121;
-$SECONDARY_LIGHT: #484848;
-$SECONDARY_DARK: #000000;
+$SECONDARY: #546e7a;
+$SECONDARY_LIGHT: #819ca9;
+$SECONDARY_DARK: #29434e;
 $SECONDARY_TEXT: #fafafa;
 
 $HEADER_HEIGHT: 60px;
