--- a/src/client/components/Catalog/index.scss
+++ b/src/client/components/Catalog/index.scss
@@ -2,6 +2,7 @@
 
 .Catalog {
   font-size: 16rem;
+  height: 100%;
   &__header {
     width: 100%;
     height: $HEADER_HEIGHT;
@@ -19,4 +20,6 @@
         text-decoration: none;
         &:last-child {
           margin-right: 0; } }
+  &__main {
+    height: 100%; }
 }
