--- a/src/client/components/Form/FormField/index.scss
+++ b/src/client/components/Form/FormField/index.scss
@@ -1,26 +1,40 @@
 .FormField {
-  margin-bottom: 10px;
+  padding: 20px;
+  padding-top: 17px;
+  border-top: 1px solid #e0e0e0;
   &:last-child {
     margin-bottom: 0; }
-  &__name {
-    font-weight: 400;
-    color: #616161;
-    margin-bottom: 5px;
-    font-size: 16px; }
-  &__input {
-    outline: none;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
-    padding: 5px;
-    font-size: 16px;
-    width: 500px;
-    &:focus {
-      box-shadow: 0 1px 6px rgba(0,0,0,0.1); } }
+  &__main {
+    align-content: flex-start;
+    display: flex; }
+    &__name {
+      font-weight: 400;
+      color: #616161;
+      margin-bottom: 5px;
+      font-size: 16px; }
+    &__input {
+      outline: none;
+      border: none;
+      border-radius: 5px;
+      box-shadow:
+        0 4px 3px -5px rgba(#333333, .1),
+        0 6px 8px 2px rgba(#333333, .1),
+        0 3px 12px 5px rgba(#333333, .1);
+      padding: 8px;
+      font-size: 18px;
+      line-height: 18px;
+      width: 400px;
+      height: 36px; }
   &__validators {
-    margin: 8px; }
+    margin-left: 20px; }
     &__validator {
-      font-size: 14px;
-      margin-bottom: 2px;
+      display: flex;
+      margin-bottom: 4px;
       &:last-child {
         margin-bottom: 0; } }
+      &__validatorIcon {
+        margin-right: 5px;
+        font-size: 15px; }
+      &__validatorText {
+        font-size: 15px; }
 }
