--- a/src/client/components/Sidebar/index.scss
+++ b/src/client/components/Sidebar/index.scss
@@ -10,8 +10,12 @@
   height: calc(100vh - #{$HEADER_HEIGHT});
   background-color: rgba(#333333, .6);
   &__nav {
-    padding: 20px;
+    padding: 20px 0;
     position: absolute;
+    box-shadow:
+      0 4px 5px -5px rgba(0,0,0,0.2),
+      0 6px 12px 2px rgba(0,0,0,0.14),
+      0 3px 15px 5px rgba(0,0,0,0.12);
     top: 0;
     left: 0;
     width: 300px;
@@ -27,12 +31,19 @@
         &:last-child {
           margin-bottom: 0; } }
         &__link {
-          margin-bottom: 5px;
-          font-size: 22rem;
-          text-decoration: none; }
-          &__subLink {
-            margin-left: 15px;
-            margin-bottom: 5px;
-            font-size: 16rem;
-            text-decoration: none; }
+          padding: 5px 20px;
+          font-size: 26rem;
+          font-weight: 400;
+          color: #333333;
+          text-decoration: none;
+          &:hover {
+            background-color: rgba(#333333, .3); } }
+        &__subLink {
+          padding: 5px 35px;
+          font-size: 20rem;
+          font-weight: 300;
+          color: #333333;
+          text-decoration: none;
+          &:hover {
+            background-color: rgba(#333333, .3); } }
 }
