--- a/src/client/components/Form/FormField/index.scss
+++ b/src/client/components/Form/FormField/index.scss
@@ -1,40 +1,34 @@
 .FormField {
-  padding: 20px;
-  padding-top: 17px;
-  border-top: 1px solid #e0e0e0;
+  margin-bottom: 25px;
   &:last-child {
     margin-bottom: 0; }
-  &__main {
-    align-content: flex-start;
-    display: flex; }
+  &__label {
+    position: relative; }
     &__name {
+      left: 10px;
       font-weight: 400;
-      color: #616161;
-      margin-bottom: 5px;
-      font-size: 16px; }
+      position: absolute;
+      color: #757575;
+      padding: 0 4px 0 4px;
+      font-weight: 400;
+      background-color: #ffffff;
+      font-size: 14px; }
     &__input {
+      margin-top: 5px;
       outline: none;
-      border: none;
-      border-radius: 5px;
-      box-shadow:
-        0 4px 3px -5px rgba(#333333, .1),
-        0 6px 8px 2px rgba(#333333, .1),
-        0 3px 12px 5px rgba(#333333, .1);
-      padding: 8px;
+      border-color: #e0e0e0;
+      border-width: 1px;
+      border-style: solid;
+      border-radius: 4px; 
       font-size: 18px;
+      padding: 13px 10px 13px 10px;
       line-height: 18px;
-      width: 400px;
-      height: 36px; }
+      width: 500px;
+      transition: .3s all;
+      &:hover {
+        border-color: #9E9E9E; }
+      &:focus {
+        border-color: #212121; } }
   &__validators {
-    margin-left: 20px; }
-    &__validator {
-      display: flex;
-      margin-bottom: 4px;
-      &:last-child {
-        margin-bottom: 0; } }
-      &__validatorIcon {
-        margin-right: 5px;
-        font-size: 15px; }
-      &__validatorText {
-        font-size: 15px; }
+    margin: 10px 0 0 10px; }
 }
