--- a/src/client/components/Form/FormTitle/index.scss
+++ b/src/client/components/Form/FormTitle/index.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   padding-bottom: 10px;
   margin: 20px;
+  margin-bottom: 0;
   &:after {
     content: "";
     position: absolute;
