--- a/src/client/components/Form/index.scss
+++ b/src/client/components/Form/index.scss
@@ -3,12 +3,11 @@
 .Form {
   background-color: #ffffff;
   border-radius: 3px;
-  box-shadow:
-    0 4px 5px -5px rgba(0,0,0,0.2),
-    0 6px 12px 2px rgba(0,0,0,0.14),
-    0 3px 15px 5px rgba(0,0,0,0.12);
+  border: 1px solid #e0e0e0;
+  width: 542px;
   &__fields {
     display: flex;
+    padding: 20px;
     flex-direction: column;
     justify-content: flex-start; }
 }
