--- a/src/client/components/Sidebar/index.scss
+++ b/src/client/components/Sidebar/index.scss
@@ -8,14 +8,10 @@
   font-size: 16rem;
   width: 100vw;
   height: calc(100vh - #{$HEADER_HEIGHT});
-  background-color: rgba(#333333, .6);
   &__nav {
     padding: 20px 0;
     position: absolute;
-    box-shadow:
-      0 4px 5px -5px rgba(0,0,0,0.2),
-      0 6px 12px 2px rgba(0,0,0,0.14),
-      0 3px 15px 5px rgba(0,0,0,0.12);
+    border-right: 1px solid #e0e0e0;
     top: 0;
     left: 0;
     width: 300px;
