--- a/src/client/components/Form/FormField/index.scss
+++ b/src/client/components/Form/FormField/index.scss
@@ -28,6 +28,7 @@
       background-color: #ffffff;
       font-size: 14px; }
     &__list {
+      margin-left: 8px;
       align-items: center;
       display: flex; }
     &__input {
