--- a/src/client/components/Form/FormTitle/index.scss
+++ b/src/client/components/Form/FormTitle/index.scss
@@ -3,8 +3,7 @@
   position: relative;
   display: inline-block;
   padding-bottom: 10px;
-  margin: 20px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   &:after {
     content: "";
     position: absolute;
