--- a/src/client/components/Form/index.scss
+++ b/src/client/components/Form/index.scss
@@ -5,9 +5,10 @@
   border-radius: 4px;
   border: 1px solid #e0e0e0;
   width: 542px;
+  padding: 20px;
   &__fields {
     display: flex;
-    padding: 20px;
     flex-direction: column;
+    margin-bottom: 20px;
     justify-content: flex-start; }
 }
