--- a/src/client/components/Form/FormField/index.scss
+++ b/src/client/components/Form/FormField/index.scss
@@ -1,5 +1,5 @@
 .FormField {
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   width: 500px;
   &:last-child {
     margin-bottom: 0; }
@@ -28,15 +28,16 @@
       background-color: #ffffff;
       font-size: 14px; }
     &__list {
-      margin-left: 8px;
+      margin-left: 12px;
+      margin-top: 3px;
       align-items: center;
       display: flex; }
     &__input {
       width: 100%;
       border: none;
       background-color: transparent;
-      outline: none;
       padding: 15px 11px 12px 13px;
+      outline: none;
       font-size: 18px;
       line-height: 18px; }
   &__validators {
