--- a/src/client/components/Form/FormSubmit/index.scss
+++ b/src/client/components/Form/FormSubmit/index.scss
@@ -1,10 +1,14 @@
 .FormSubmit {
-  font-size: 18rem;
-  padding: 8px;
+  font-size: 20rem;
+  padding: 16px 0;
+  width: 100%;
   margin: 0;
   outline: none;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #E0E0E0;
   background-color: transparent;
   border-radius: 3px;
   cursor: pointer;
+  transition: .2s all;
+  &:hover {
+    background-color: #EEEEEE; }
 }
