--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -1,5 +1,5 @@
 // import fonts
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 @import "./globals/index.scss";
