--- a/src/client/components/Album/Album.scss
+++ b/src/client/components/Album/Album.scss
@@ -7,7 +7,7 @@
   box-shadow: 0 1px 4px 0 rgba(#333333,.3);
   &__cover {
     width: 100%;
-    height: 100%;
+    height: auto;
     border-radius: 3px 3px 0 0; }
   &__info {
     width: 100%;
