--- a/src/client/components/Songs/Songs.scss
+++ b/src/client/components/Songs/Songs.scss
@@ -1,9 +1,9 @@
 .Songs {
   font-size: 16rem;
-  padding: 20px;
   &__table {
     width: 100%;
     box-shadow: 0 1px 4px 0 rgba(#333333,.3);
+    background-color: #ffffff;
     border-collapse: collapse; }
     &__tableHead {
       border-bottom: 1px solid #e0e0e0; }
