--- a/src/client/components/Album/Album.scss
+++ b/src/client/components/Album/Album.scss
@@ -11,6 +11,11 @@
     transition: .2s all;
     &:hover {
       box-shadow: 0 3px 6px 0 rgba(#333333,.5); } }
+  &__link {
+    text-decoration: none;
+    &:hover {
+      color: #1a73e8;
+      text-decoration: underline; } }
   &__info {
     width: 100%;
     padding: 10px 0;
