--- a/src/client/components/Artist/Artist.scss
+++ b/src/client/components/Artist/Artist.scss
@@ -7,9 +7,9 @@
   box-shadow: 0 1px 4px 0 rgba(#333333,.3);
   &__artistPhoto {
     width: 100%;
-    height: 100%;
-    border-radius: 3px 3px 0 0;
-  }
+    height: auto;
+    background-position: center;
+    border-radius: 3px 3px 0 0; }
   &__name {
     margin: 0;
     width: 100%;
@@ -19,6 +19,5 @@
     border-bottom: 1px solid;
     border-left: 1px solid;
     border-radius: 0 0 3px 3px;
-    border-color: #e0e0e0;
-  }
+    border-color: #e0e0e0; }
 }
