--- a/src/client/components/Header/Header.scss
+++ b/src/client/components/Header/Header.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: $HEADER_HEIGHT;
   font-size: 16rem;
+  background-color: #ffffff;
   z-index: 3;
   border-bottom: 1px solid #e0e0e0;
   &__hamburger {
