--- a/src/client/components/Artist/Artist.scss
+++ b/src/client/components/Artist/Artist.scss
@@ -3,21 +3,11 @@
   align-items: center;
   flex-direction: column;
   background-color: transparent;
-  border-radius: 3px;
-  box-shadow: 0 1px 4px 0 rgba(#333333,.3);
-  &__artistPhoto {
-    width: 100%;
-    height: auto;
-    background-position: center;
-    border-radius: 3px 3px 0 0; }
+  &__photo:before {
+    padding-top: 56.25%; }
   &__name {
     margin: 0;
     width: 100%;
-    font-size: 20rem;
-    padding: 10px;
-    border-right: 1px solid;
-    border-bottom: 1px solid;
-    border-left: 1px solid;
-    border-radius: 0 0 3px 3px;
-    border-color: #e0e0e0; }
+    font-size: 18rem;
+    padding: 10px 0; }
 }
