--- a/src/client/components/Artists/Artists.scss
+++ b/src/client/components/Artists/Artists.scss
@@ -4,33 +4,15 @@
   grid-gap: 20px;
   grid-template-columns: 1fr;
   @media (min-width: 350px) {
-    & {
-      grid-template-columns: 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr; } }
   @media (min-width: 600px) {
-    & {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr; } }
   @media (min-width: 1100px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr; } }
   @media (min-width: 1400px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr 1fr; } }
   @media (min-width: 1600px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr 1fr 1fr; } }
   @media (min-width: 2000px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; } }
 }
