--- a/src/client/components/Catalog/Catalog.scss
+++ b/src/client/components/Catalog/Catalog.scss
@@ -1,11 +1,9 @@
-@import "../../globals/index.scss";
-
 .Catalog {
   font-size: 16rem;
   height: 100%;
   &__header {
     width: 100%;
-    height: $HEADER_HEIGHT;
+    height: 60px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
