--- a/src/client/components/Genre/Genre.scss
+++ b/src/client/components/Genre/Genre.scss
@@ -5,15 +5,14 @@
   background-color: transparent;
   border-radius: 3px;
   box-shadow: 0 1px 4px 0 rgba(#333333,.3);
-  &__info {
+  &__name {
+    margin: 0;
     width: 100%;
+    font-size: 20rem;
     padding: 10px;
-    border-radius: 0 0 3px 3px;
     border-right: 1px solid;
     border-bottom: 1px solid;
     border-left: 1px solid;
+    border-radius: 0 0 3px 3px;
     border-color: #e0e0e0; }
-    &__title {
-      font-size: 20rem;
-      margin-bottom: 3px; }
 }
