--- a/src/client/components/Album/Album.scss
+++ b/src/client/components/Album/Album.scss
@@ -1,20 +1,47 @@
 .Album {
   margin-bottom: 10px;
   &__cover {
+    border-radius: 3px;
     position: relative;
-    &__cover:before {
-      padding-top: 100%; } }
-      &__playButton {
+    &:hover &-play {
+      display: block; }
+    &:hover &-blackBox {
+      background-color: rgba(#000000, .8); }
+    &-img {
+      transition: .3s all;
+      box-shadow:
+        0 3px 6px rgba(0,0,0,0.16),
+        0 3px 6px rgba(0,0,0,0.23);
+      &:hover {
+        box-shadow:
+          0 6px 12px rgba(0,0,0,0.25),
+          0 6px 12px rgba(0,0,0,0.22); } }
+    &-blackBox {
+      position: absolute;
+      top: 0;
+      left: 0;
+      cursor: pointer;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      transition: .2s all;
+      border-radius: 4px;
+      background-color: transparent; }
+    &-play {
+      z-index: 2;
       top: 50%;
       left: 50%;
       display: none;
       color: #ffffff;
-      font-size: 60rem;
+      font-size: 100rem;
       position: absolute;
       margin-right: -50%;
       transition: .2s all;
       border-radius: 100%;
-      transform: translate(-50%, -50%); }
+      transform: translate(-50%, -50%);
+      &:hover {
+        background-color: rgba(#FFFFFF, .2); } } }
   &__info {
     padding-top: 10px;
     border-color: #e0e0e0; }
