--- a/src/client/components/ImgLink/ImgLink.scss
+++ b/src/client/components/ImgLink/ImgLink.scss
@@ -16,9 +16,5 @@
     border-radius: 4px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
-    transition: .2s all;
-    box-shadow: 0 1px 4px 0 rgba(#333333,.3);
-    &:hover {
-      box-shadow: 0 3px 6px 0 rgba(#333333,.5); } }
+    background-position: 50% 50%; }
 }
