--- a/src/client/components/Album/Album.scss
+++ b/src/client/components/Album/Album.scss
@@ -7,12 +7,12 @@
     box-shadow:
       0 3px 6px rgba(0,0,0,0.16),
       0 3px 6px rgba(0,0,0,0.23);
-    &:hover &-icon {
-      display: block; }
+    &:hover &-button {
+      display: flex; }
     &:hover &-blackBox {
       background-color: rgba(#000000, .8); }
     &:hover &-img {
-      filter: blur(8px); }
+      filter: blur(40px); }
     &-img {
       border-radius: 5px; }
     &-blackBox {
@@ -24,21 +24,23 @@
       width: 100%;
       height: 100%;
       background-color: transparent; }
-    &-icon {
+    &-button {
       transform: translate(-50%, -50%);
       z-index: 2;
-      position: relative;
       display: none;
       outline: none;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
       width: 50%;
       height: 50%;
-      color: #ffffff;
-      font-size: 50rem;
       position: absolute;
-      text-align: center;
-      padding-top: 16.5%;
       &:hover {
-        background-color: rgba(#FFFFFF, .2); } }
+        background-color: rgba(#FFFFFF, .2); }
+      &-icon {
+        outline: none;
+        color: #ffffff;
+        font-size: 50rem; } }
     &-top-left {
       top: 25%;
       left: 25%;
@@ -60,8 +62,7 @@
     border-color: #e0e0e0; }
     &__title,
     &__artistName {
-      overflow: hidden;
-      text-overflow: clip; }
+      overflow: hidden; }
     &__title {
       font-size: 18rem;
       max-height: 18rem;
