--- a/src/client/components/Img/Img.scss
+++ b/src/client/components/Img/Img.scss
@@ -1,6 +1,7 @@
-.ImgLink {
-  position: relative;
+.Img {
   width: 100%;
+  overflow: hidden;
+  position: relative;
   &:before {
     content: "";
     display: block;
