--- a/src/client/components/Artist/Artist.scss
+++ b/src/client/components/Artist/Artist.scss
@@ -1,9 +1,11 @@
+@import "../../globals/index.scss";
+
 .Artist {
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: transparent;
-  &__photo:before {
+  &__cover:before {
     padding-top: 56.25%; }
   &__name {
     margin: 0;
