--- a/src/client/components/Song/Song.scss
+++ b/src/client/components/Song/Song.scss
@@ -1,19 +1,26 @@
+@import "../../globals/index.scss";
+
 .Song {
-  height: 44px;
+  height: 38px;
   border-bottom: 1px solid #e0e0e0;
   &:hover {
     background-color: #eeeeee; }
   &:hover &__playIcon {
     display: inline-block; }
+  @media (min-width: 1200px) {
+    height: 44px; }
   &__tableCol {
     text-align: left;}
     &__albumCover {
-      width: 30px;
-      border-radius: 3px;
+      width: 24px;
+      height: 24px;
+      border-radius: $BORDER_RADIUS;
       box-shadow: 0 1px 4px 0 rgba(#333333,.3);
-      height: 30px;
       &:before {
-        padding-top: 100%; } }
+        padding-top: 100%; }
+      @media (min-width: 1200px) {
+        width: 30px;
+        height: 30px; } }
     &__tableHeadCover {
       position: relative;
       width: 50px;
@@ -21,7 +28,7 @@
       &__playIcon {
         position: absolute;
         outline: none;
-        font-size: 30rem;
+        font-size: 24rem;
         transition: .2s box-shadow;
         color: #ffffff;
         left: 8px;
@@ -32,9 +39,17 @@
         &:hover {
           box-shadow: 3px 6px 10px 0 rgba(#333333,.4); }
         &:active {
-          animation: play .3s ease-out; } }
+          animation: play .3s ease-out; }
+        @media (min-width: 1200px) {
+          font-size: 30rem; } }
+    &__duration {
+      text-align: center;
+      span {
+        color: #757575; } }
     &__tableColSpan {
-      font-size: 16rem; }
+      font-size: 14rem;
+      @media (min-width: 1200px) {
+        & { font-size: 16rem; } } }
     &__mix {
       font-weight: 400;
       color: #757575; }
