--- a/src/client/components/Form/FormField/FormField.scss
+++ b/src/client/components/Form/FormField/FormField.scss
@@ -32,12 +32,12 @@
       margin-top: 3px;
       align-items: center;
       display: flex; }
-    &__img {
-      height: 26px;
-      width: 26px;
+    &__cover {
       margin: 13px -5px 12px 13px;
       border-radius: 4px;
-      border: 1px solid #BDBDBD; }
+      border: 1px solid #BDBDBD;
+      height: 26px;
+      width: 26px; }
     &__input {
       width: 100%;
       border: none;
