--- a/src/client/components/Form/FormField/FormFieldDoc/FormFieldDoc.scss
+++ b/src/client/components/Form/FormField/FormFieldDoc/FormFieldDoc.scss
@@ -12,7 +12,7 @@
     border-radius: 3px 0 0 3px;}
   &__text {
     padding: 3px 3px 3px 6px;
-    font-size: 18px;
+    font-size: 18rem;
     white-space: nowrap; }
   &__close {
     margin: 2px;
