--- a/src/client/components/Form/FormField/FormFieldDoc/FormFieldDoc.scss
+++ b/src/client/components/Form/FormField/FormFieldDoc/FormFieldDoc.scss
@@ -18,7 +18,7 @@
     margin: 2px;
     margin-left: 0;
     padding: 1px;
-    font-size: 18px;
+    font-size: 18rem;
     border-radius: 100%;
     transition: .2s all;
     outline: none;
