--- a/src/client/components/Album/Album.scss
+++ b/src/client/components/Album/Album.scss
@@ -3,12 +3,14 @@
 .Album {
   margin-bottom: 10px;
   &__info {
+    width: 100%;
     padding-top: 10px;
     border-color: #e0e0e0; }
     &__title,
     &__artistName {
-      line-height: 1.1;
-      overflow: hidden; }
+      text-overflow: clip;
+      overflow: hidden;
+      line-height: 1.1; }
     &__title {
       font-size: 18rem;
       margin-bottom: 3px;
