--- a/src/client/components/Catalog/Add/Add.scss
+++ b/src/client/components/Catalog/Add/Add.scss
@@ -1,29 +1,8 @@
 @import "../../../globals/index.scss";
 
 .Add {
-  height: 100%;
-  &__header {
-    width: 100%;
-    height: $HEADER_HEIGHT;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border-bottom: 1px solid #e0e0e0;
-    padding: 20px; }
-    &__links {
-      display: flex; }
-      &__link {
-        margin-right: 5px;
-        font-size: 20rem;
-        display: block;
-        text-decoration: none;
-        &:last-child {
-          margin-right: 0; } }
-  &__main {
-    height: calc(100vh - 3 * #{$HEADER_HEIGHT});
-    overflow: auto; }
-    &__content {
-      display: flex;
-      justify-content: center;
-      padding: 20px; }
+  height: calc(100vh - #{$HEADER_HEIGHT});
+  display: flex;
+  justify-content: center;
+  padding: 20px;
 }
