--- a/src/client/components/IconText/IconText.scss
+++ b/src/client/components/IconText/IconText.scss
@@ -1,7 +1,7 @@
 .IconText {
   cursor: pointer;
   &__text {
-    user-select: none;
+    color: #ffffff;
     margin-top: 5px;
-    color: #ffffff; }
+    user-select: none; }
 }
