--- a/src/client/components/Artist/Artist.scss
+++ b/src/client/components/Artist/Artist.scss
@@ -6,6 +6,6 @@
   &__name {
     margin: 0;
     width: 100%;
-    font-size: 18rem;
-    padding: 10px 0; }
+    padding: 10px 0;
+    font-size: 18rem; }
 }
