--- a/src/client/components/Genres/Genres.scss
+++ b/src/client/components/Genres/Genres.scss
@@ -1,36 +1,18 @@
 .Genres {
-  font-size: 16rem;
   display: grid;
   grid-gap: 20px;
+  font-size: 16rem;
   grid-template-columns: 1fr;
   @media (min-width: 350px) {
-    & {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr; } }
   @media (min-width: 600px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr; } }
   @media (min-width: 1100px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr 1fr; } }
   @media (min-width: 1400px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr 1fr 1fr; } }
   @media (min-width: 1600px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; } }
   @media (min-width: 2000px) {
-    & {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    }
-  }
+    & { grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr; } }
 }
